Fix nav z-index

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -22,3 +22,7 @@ figcaption {
     text-align: center;
     font-size: smaller;
 }
+
+.site-nav {
+    z-index: 100000;
+}
